# freestiler

./: .Rbuildignore  .cursorignore  .gitignore  404.html  AGENTS.html  AGENTS.md  DESCRIPTION  LICENSE-text.html  LICENSE.html  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  air.toml  authors.html  authors.md  build.R  index.html  index.md  install.R  llms.txt  pkgdown.yml  search.json  sitemap.xml  turbines.csv
.github/workflows/: python-package.yml  r-package.yml
R/: freestile.R  freestile_h3.R
articles/: getting-started.html  getting-started.md  h3-hexagonal-binning.html  h3-hexagonal-binning.md  index.html  index.md  maplibre-tiles.html  maplibre-tiles.md  mapping.html  mapping.md  python.html  python.md
dev/scripts/: pkg_check.R  pkg_docs.R  pkg_init.R
docs/: 404.html  LICENSE-text.html  LICENSE.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
docs/articles/: getting-started.html  h3-hexagonal-binning.html  h3-hexagonal-binning.md  index.html  index.md  maplibre-tiles.html  mapping.html  python.html  python.md
docs/news/: index.html  index.md
docs/reference/: freestile.html  freestile_file.html  freestile_h3.html  freestile_h3.md  freestile_layer.html  freestile_query.html  freestiler-package.html  index.html  index.md  pmtiles_metadata.html  rust_freestile.html  rust_freestile_duckdb.html  rust_freestile_duckdb_query.html  rust_freestile_file.html  rust_pmtiles_metadata.html  serve_tiles.html  stop_server.html  view_h3_tiles.html  view_h3_tiles.md  view_tiles.html
man/: freestile_h3.Rd  freestiler-package.Rd  view_h3_tiles.Rd
news/: index.html  index.md
python/: Cargo.toml  README.md  pyproject.toml
python/python/freestiler/: __init__.py  h3.py
python/tests/: test_h3.py  test_thin_polygons.py
reference/: freestile.html  freestile_file.html  freestile_h3.html  freestile_h3.md  freestile_layer.html  freestile_layer.md  freestile_query.html  freestile_query.md  freestiler-package.html  freestiler-package.md  freestiler.html  index.html  index.md  pmtiles_metadata.html  rust_freestile.html  rust_freestile_duckdb.html  rust_freestile_duckdb_query.html  rust_freestile_file.html  rust_pmtiles_metadata.html  serve_tiles.html  serve_tiles.md  stop_server.html  stop_server.md  view_h3_tiles.html  view_h3_tiles.md  view_tiles.html  view_tiles.md
src/: Makevars.in  Makevars.win.in
src/rust/: Cargo.toml
src/rust/freestiler-core/: Cargo.toml
src/rust/freestiler-core/src/: file_input.rs  lib.rs  mlt.rs  mvt.rs  quantize.rs
tests/testthat/: test-crs-detection.R  test-file-input.R  test-h3.R  test-query.R
tests/testthat/data/: atlanta.v1.1.parquet
tools/: build_cran.R  config.R  feature-smoke.R
vignettes/: getting-started.qmd  h3-hexagonal-binning.qmd  python.qmd
