[package]
name = "freestiler"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
crate-type = ["staticlib"]
name = "freestiler"

[features]
default = []
geoparquet = ["freestiler-core/geoparquet"]
duckdb = ["freestiler-core/duckdb"]
fastpfor = ["freestiler-core/fastpfor"]
fsst = ["freestiler-core/fsst"]

[dependencies]
extendr-api = "0.8"
freestiler-core = { path = "freestiler-core" }

# Needed directly for sfg parsing (geo-types geometry constructors)
geo-types = "0.7"

# Needed for PMTiles metadata reading
pmtiles2 = "=0.3.1"
# Keep pmtiles2's proc-macro dependency chain on pre-Edition-2024 indexmap.
indexmap = "=2.10.0"
flate2 = "1"
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
