[package]
name = "freestiler-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Core Rust engine for building PMTiles vector tilesets"
license = "MIT"
homepage = "https://walker-data.com/freestiler/"
documentation = "https://walker-data.com/freestiler/articles/maplibre-tiles.html"
repository = "https://github.com/walkerke/freestiler"
publish = false

[features]
default = []
geoparquet = ["dep:parquet", "dep:arrow-array", "dep:arrow-schema", "dep:geozero"]
duckdb = ["dep:duckdb", "dep:geozero"]
fastpfor = ["dep:fastpfor"]
fsst = ["dep:fsst-rs"]

[dependencies]
# Geometry operations
geo = "0.29"
geo-types = "0.7"
# Keep geo's transitive spade dependency before Rust 1.78-only API usage.
spade = "=2.13.1"

# Protobuf encoding for MVT
prost = "0.13"

# PMTiles archive writing
pmtiles2 = "=0.3.1"
# Keep pmtiles2's proc-macro dependency chain on pre-Edition-2024 indexmap
# for CRAN's Rust 1.77.2 compatibility checks.
indexmap = "=2.10.0"

# Varint encoding for MLT format
integer-encoding = "=4.0.2"

# Gzip compression
flate2 = "1"

# JSON metadata
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parallel tile encoding
rayon = "=1.10.0"
# Keep rayon's transitive core crate below Rust 1.80-only releases.
rayon-core = "=1.12.1"
# Keep cc's jobserver branch from vendoring Windows-only Edition 2024 crates.
jobserver = "=0.1.32"

# GeoParquet file input (optional)
parquet = { version = "57", optional = true, default-features = false, features = ["arrow", "snap"] }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }

# WKB geometry parsing (shared by geoparquet and duckdb features)
geozero = { version = "0.13", optional = true, features = ["with-wkb", "with-geo"] }

# DuckDB file input (optional)
duckdb = { version = "1.2", optional = true, features = ["bundled"] }

# Advanced MLT encodings (optional)
fastpfor = { version = "0.7", optional = true }
fsst-rs = { version = "0.5", optional = true }

[dev-dependencies]
# MapLibre reference MLT decoder — used for conformance fixture tests
mlt-core = "0.1.2"
